--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gsap": "^3.12.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "particles.js": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-fonts": "^1.2.1",
